--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+/* Import Google Fonts Link */
+@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Geologica:wght@200;300;400;500;600;700;800;900&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Geologica', sans-serif;
+}
+
+.logo-font{
+  font-family: 'Alex Brush', cursive;
+}
